# supplement_scanner

./: .gitignore  Aptfile  Procfile  README.md  pyproject.toml
app/: bot.py  ocr.py  scrape_supplements.py
data/: supplements.csv
